--- a/src/app/sales-management/sales-management.component.scss
+++ b/src/app/sales-management/sales-management.component.scss
@@ -49,6 +49,10 @@
         }
     }
 
+    .edit-row.selected {
+        background-color: #dae9ed;
+    }
+
     input.error{
         border: 1px solid red;
     }
